Improved template (with overview of results)
svn path=/trunk/matlab/; revision=788


Former-commit-id: 143093feb77b32c3ea032ad38590fcb90cd4abf7

--- a/maintenance/automatedTesting/templates/default/index.html
+++ b/maintenance/automatedTesting/templates/default/index.html
@@ -15,7 +15,10 @@
 		<frame src="Header_right.html" name="rightheader" frameborder="0" SCROLLING="no" NORESIZE>
 	</frameset>
 	<frameset cols="25%,*">
- 		<frame src="testresults.html" name="test_tree" id="test_tree" frameborder="1"  SCROLLING="yes" marginwidth="0" marginheight="0">
+		<frameset rows="*,60" BORDER="1" FRAMESPACING="0">
+			<frame src="testresults.html" name="test_tree" id="test_tree" frameborder="1"  SCROLLING="yes" marginwidth="0" marginheight="0">
+			<frame src="testresultoverview.html" name="test_results" id="test_results" frameborder="0" scrolling="no" marginwidth="0" marginheight="0">
+		</frameset>
     	<frame name="test_viewer" id="test_viewer" frameborder="1" scrolling="yes" marginwidth="10" marginheight="10">
   	</frameset>
 </frameset>
