--- a/maintenance/automatedTesting/templates/default/index.html
+++ b/maintenance/automatedTesting/templates/default/index.html
@@ -10,14 +10,14 @@
 
 <frameset rows="100,*" BORDER="1" FRAMESPACING="0">
 	<frameset cols="*,202,*" BORDER="0" FRAMESPACING="0">
-		<frame src="Header_left.html" name="leftheader" frameborder="0" SCROLLING="no" NORESIZE>
+		<frame name="leftheader" frameborder="0" SCROLLING="no" NORESIZE> <!-- src="Header_left.html" -->
 		<frame src="Deltares_Logo.html" name="header" id="header" frameborder="0" SCROLLING="no" NORESIZE>
-		<frame src="Header_right.html" name="rightheader" frameborder="0" SCROLLING="no" NORESIZE>
+		<frame name="rightheader" frameborder="0" SCROLLING="no" NORESIZE> <!-- src="Header_right.html" -->
 	</frameset>
 	<frameset cols="25%,*">
 		<frameset rows="*,60" BORDER="1" FRAMESPACING="0">
-			<frame src="testresults.html" name="test_tree" id="test_tree" frameborder="1"  SCROLLING="yes" marginwidth="0" marginheight="0">
-			<frame src="testresultoverview.html" name="test_results" id="test_results" frameborder="0" scrolling="no" marginwidth="0" marginheight="0">
+			<frame src="testresultstree.html" name="test_tree" id="test_tree" frameborder="1"  SCROLLING="yes" marginwidth="0" marginheight="0">
+			<frame src="resultoverview_small.html" name="test_results" id="test_results" frameborder="0" scrolling="no" marginwidth="0" marginheight="0">
 		</frameset>
     	<frame name="test_viewer" id="test_viewer" frameborder="1" scrolling="yes" marginwidth="10" marginheight="10">
   	</frameset>
