--- a/websites/dataviewer/public/templates/anton.html
+++ b/websites/dataviewer/public/templates/anton.html
@@ -1,3 +1,4 @@
+<h3>Anton's Tool</h3>
 <FORM>
 <SCRIPT LANGUAGE="JavaScript" SRC="CalendarPopup.js"></SCRIPT>
 <SCRIPT LANGUAGE="JavaScript" ID="js1">
