--- a/websites/dataviewer/public/templates/anton.html
+++ b/websites/dataviewer/public/templates/anton.html
@@ -1,6 +1,6 @@
 <h3>Anton's Tool</h3>
 <FORM>
-<SCRIPT LANGUAGE="JavaScript" SRC="CalendarPopup.js"></SCRIPT>
+<SCRIPT LANGUAGE="JavaScript" SRC="http://dtvirt13/bwn/optie_compiled/templates/CalendarPopup.js"></SCRIPT>
 <SCRIPT LANGUAGE="JavaScript" ID="js1">
 	var cal1 = new CalendarPopup();
 </SCRIPT>
