--- a/websites/dataviewer/public/stylesheets/style.css
+++ b/websites/dataviewer/public/stylesheets/style.css
@@ -5,3 +5,13 @@ p        {font-family: Arial, Helvetica, sans-serif; font-size: 12px;}
 select.s {font-size: 12px;}
 input.vs {font-size: 12px;}
 input.s  {font-size: 12px;}
+table.links {
+	border-width: 1px;
+	border-spacing: ;
+	border-style: outset;
+	border-color: white;
+	border-collapse: separate;
+	background-color: #336699;
+	color: #FFFFFF;
+	text-decoration:none
+	}
